# sql_with_cpp

./: CMakeLists.txt  README.md
db/: practice.db  scratch.db
include/: BWSQL.h  sqlcpp.h  uzo_sqlite_utils.hpp
src/: BWSQL.cpp  Ch02-solution.cpp  bwsql-copy-test.cpp  bwsql-test.cpp  db-prepare2.cpp  practice.cpp
